fix: Overflow sidebar layout

--- a/src/component/style/nav.module.css
+++ b/src/component/style/nav.module.css
@@ -3,12 +3,34 @@
     opacity: 0;
     top: 0;
     left: -100%;
-    height: 100vh;
+    height: 100%;
+    overflow: auto;
     position: fixed;
     z-index: var(--z-fixed);
     transition: var(--transition-default) ease-in-out;
     background: var(--white-color);
     /* box-shadow: .25rem 1.25rem 1.25rem var(--light-color); */
+}
+
+.aside::-webkit-scrollbar {
+    visibility: hidden;
+    width: .30rem;
+    border-radius: .25rem;
+}
+
+.aside::-webkit-scrollbar-thumb {
+    border-radius: .25rem;
+    visibility: hidden;
+}
+
+.aside::-webkit-scrollbar-thumb:hover {
+    border-radius: .25rem;
+    visibility: hidden;
+}
+
+.aside.active::-webkit-scrollbar,
+.aside.active::-webkit-scrollbar-thumb {
+    visibility: visible;
 }
 
 .aside.active {
@@ -21,7 +43,7 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    padding: 5rem 1rem 1rem 1rem;
+    padding: 5rem .75rem .75rem .75rem;
     overflow: hidden;
 }
 
@@ -54,7 +76,7 @@
 
 .link__text {
     font-weight: var(--font-semi-bold);
-    margin-left: .75rem;
+    margin-left: .85rem;
 }
 
 .content {
@@ -109,6 +131,16 @@
 }
 
 @media (hover: hover) and (pointer: fine) {
+
+    .aside:hover::-webkit-scrollbar,
+    .aside:hover::-webkit-scrollbar-thumb {
+        visibility: visible;
+    }
+
+    .aside.active::-webkit-scrollbar-thumb:hover {
+        visibility: visible;
+    }
+
     .aside.active .link:hover .link__icon {
         margin-left: .25rem;
     }
